--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
