--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "firebase": "^9.17.1",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
