--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "expo": "~47.0.12",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "firebase": "^9.17.1",
@@ -21,13 +22,13 @@
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.2.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.7.0",
     "react-native-uuid": "^2.0.1",
     "react-redux": "^8.0.5",
-    "tailwindcss": "^3.2.4",
-    "expo-splash-screen": "~0.17.5"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
