--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
+    "@sanity/client": "^5.2.1",
+    "@sanity/image-url": "^1.0.2",
     "axios": "^1.3.2",
     "expo": "~47.0.12",
     "expo-splash-screen": "~0.17.5",
