--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.7.0",
+    "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "react-redux": "^8.0.5",
     "tailwindcss": "^3.2.4"
