--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "firebase": "^9.17.1",
+    "intl": "^1.2.5",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
